# ThorCC

./: .gitignore  Cargo.toml  Todo.md  dev.sh  start.sh  ui_preview.html
crates/thor_geom/: Cargo.toml
crates/thor_geom/src/: cam.rs  chain.rs  lib.rs  post_processor.rs  sketcher.rs
crates/thor_server/: Cargo.toml
crates/thor_server/src/: main.rs  project.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Viewport.tsx
projects/first-one/versions/: v0001.thorcc  v0002.thorcc  v0003.thorcc  v0004.thorcc
projects/papaerlappp/versions/: v0001.thorcc  v0002.thorcc
proto/: thorcc.proto
