[package]
name = "thor_server"
version = "0.1.0"
edition = "2024"

[dependencies]
thor_geom = { path = "../thor_geom" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
rust-embed = { version = "8.0", features = ["axum"] }
axum-embed = "0.1"
webbrowser = "0.8"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
